--- a/css/login.css
+++ b/css/login.css
@@ -39,8 +39,10 @@
     }
 
   body{
+    background-image: url(./img/patron.jpg);
     margin: 0;
     padding: 0;
+    align-items: center;
   }
   #cont1{
     background-image: url(./img/login.jpg);
@@ -56,6 +58,26 @@
     width: 320px;
   }
 
+  #contrecuperar{
+  width: 80%;
+  background-image: url(./img/login.jpg);
+  background-size: cover;
+     margin: 80px auto;
+   padding: 40px;
+   box-shadow: 0px 0px 10px gray;
+   background-position: center;
+   
+  }
+  #recuperar{
+    min-height: 400px;
+    width: 100%;
+    background-position: center;
+    text-align: center;
+    background:white;
+    opacity: .9;
+
+  }
+
   input[type=text] {
     width: 80%;
     padding: 10px 18px;
@@ -65,6 +87,31 @@
     background-color: #b97f52;
     color: white;
     border-radius: 20px;
+    
+  }
+  input[type=password] {
+    width: 80%;
+    padding: 10px 18px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    background-color: #b97f52;
+    color: white;
+    border-radius: 20px;
+    
+  }
+  #buttonrecuperar {
+    background-color: #b97f52; /* Green */
+    border: none;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 30%;
+    
     
   }
   ::-webkit-input-placeholder { color: white; 
