--- a/css/menu.css
+++ b/css/menu.css
@@ -1,19 +1,30 @@
- 
-  img{
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+} 
+
+body{
+  background-image: url(../img/patron.jpg);
+  font-family: 'Montserrat', sans-serif;
+  background-size: cover;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+
+img{
     min-width: 100%;
     height: auto;
 
 }
-
-
 
 .grid-container {
   display: grid;
   grid-template-columns: auto auto;
   justify-content: center;
   align-items: center;
-  padding: 150px;
-  padding-bottom: 12%;
+  padding: 0px 1150px 150px 150px;
 }
 
 .grid-item {
@@ -22,23 +33,19 @@
   text-align: center;
   margin: 0%;
   padding: 0%;
-  }
 
-body{
-  margin: 0;
-  padding: 0;
 }
 
 #cont2{
-  background-color: white;
-  background-size: 100%;
-  height: 250px;
-  width: 500px;
-  margin: 0;
-  position: top;
+  background-color: white;  
+  height: 300px;
+  width: 400px;
+  text-align: center;
+
 }
 
-input[type=text] {
+
+input {
   width: 80%;
   padding: 10px 18px;
   margin: 8px 0;
@@ -47,45 +54,37 @@ input[type=text] {
   background-color: #b97f52;
   color: white;
   border-radius: 20px;
-  
+  outline: none;  
 }
-input[type=password] {
-  width: 80%;
-  padding: 10px 18px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border: none;
-  background-color: #b97f52;
-  color: white;
-  border-radius: 20px;
 
-}
 
 ::-webkit-input-placeholder { color: white; 
-font-family: Montserrat SemiBold;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
 
 } 
 
-
 p{
   position: relative;
-  right: center top;
-  top: 0px;
-  font-family: Montserrat ExtraBold;
+  right: 0px;
+  top: -5px;  
   font-size: 110%;
+  font-weight: 800;
+  text-align: center;
+  
 }
-
 .button {
   background-color: #b97f52; /* Green */
   border: none;
   color: white;
-  padding: 5px;
-  text-align: 0;
+  padding: 8px;
+  text-align: center;
   text-decoration: none;
   font-size: 14px;
   margin: 2px 2px;
   cursor: pointer;
-  width: 20%;
+  width: 25%;
   border-radius: 20px;
-  font-family: Montserrat SemiBold;
+  font-weight: 600;
+  
 }
