--- a/css/login.css
+++ b/css/login.css
@@ -23,7 +23,7 @@ img {
   grid-template-columns: auto auto;
   justify-content: center;
   align-items: center;
-  padding: 150px 150px 0px 150px;
+  padding: 60px;
 
 }
 
