Añadí algo al JS

--- a/css/login.css
+++ b/css/login.css
@@ -98,6 +98,20 @@ input[type=password] {
   border-radius: 20px;
   outline: none;
   
+  
+}
+input[type=submit] {
+  width: 80%;
+  padding: 10px 18px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  background-color: #b97f52;
+  color: white;
+  border-radius: 20px;
+  outline: none;
+  
+  
 }
 #buttonrecuperar {
   background-color: #b97f52; /* Green */
