--- a/css/login.css
+++ b/css/login.css
@@ -23,7 +23,7 @@ img {
   grid-template-columns: auto auto;
   justify-content: center;
   align-items: center;
-  padding: 60px;
+  padding: 90px;
 
 }
 
@@ -84,31 +84,31 @@ input[type=text] {
   color: white;
   border-radius: 20px;
   outline: none;
-  
+    
 }
 
 input[type=password] {
   width: 80%;
   padding: 10px 18px;
-  margin: 8px 0;
+  margin: 0px;
   box-sizing: border-box;
   border: none;
   background-color: #b97f52;
   color: white;
   border-radius: 20px;
   outline: none;
-  
-  
+    
 }
-input[type=submit] {
+
+input[type=button] {
   width: 80%;
   padding: 10px 18px;
   margin: 8px 0;
   box-sizing: border-box;
   border: none;
-  background-color: #b97f52;
+  background-color: #372d28;
   color: white;
-  border-radius: 20px;
+  border-radius: 1px;
   outline: none;
   
   
@@ -134,10 +134,12 @@ input[type=submit] {
 
 p{
   position: relative;
-  right: 90px;
+  right: 48px;
   top: 0px;  
   font-size: 110%;
   font-weight: 800;
+  margin: 25px 0;
+  
   
 }
 
