--- a/css/recuperar.css
+++ b/css/recuperar.css
@@ -62,22 +62,23 @@
    padding: 40px;
    box-shadow: 0px 0px 10px gray;
    background-position: center;
-   
+     
   }
   #recuperar{
     min-height: 400px;
-    width: 100%;
+    /*width: 40%;*/
     background-position: center;
     text-align: center;
-    background:white;
-    opacity: .9;
+    background:white;   
+    height: 470px;
+    width: 350px;
   
   }
   
   input[type=text] {
-    width: 80%;
+    width: 60%;
     padding: 10px 18px;
-    margin: 8px 0;
+ 
     box-sizing: border-box;
     border: none;
     background-color: #b97f52;
@@ -86,30 +87,33 @@
     outline: none;
     
   }
-  
-  input[type=password] {
+  input[type=button] {
     width: 80%;
     padding: 10px 18px;
-    margin: 8px 0;
+    margin: 6px 0;
     box-sizing: border-box;
     border: none;
-    background-color: #b97f52;
+    background-color: #372d28;
     color: white;
-    border-radius: 20px;
+    border-radius: 1px;
     outline: none;
     
+    
   }
+
   #buttonrecuperar {
     background-color: #b97f52; /* Green */
     border: none;
     color: white;
-    padding: 15px;
+    padding: 8px;
     text-align: center;
     text-decoration: none;
     font-size: 14px;
-    margin: 4px 2px;
+    margin: -8px 0px;
     cursor: pointer;
     width: 30%;
+    background-color: #372d28;
+   
     
   }
   ::-webkit-input-placeholder { color: white; 
@@ -118,20 +122,22 @@
   
   } 
   
-  p{
-    position: relative;
+  h1{
+    position: center;
     right: 90px;
     top: 0px;  
     font-size: 110%;
     font-weight: 800;
+    margin: 50px 0;
     
   }
   
-  a{
+  h2{
     color: #372d28;
     text-decoration: none;
-    font-size: 60%;
+    font-size: 90%;
     font-weight: 800;
+    
     
     
     
