--- a/css/guardaryeliminar.css
+++ b/css/guardaryeliminar.css
@@ -37,6 +37,18 @@
     text-align: left;
     
   }
+  input[type=text] {
+    width: 50%;
+    padding: 10px 18px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    background-color: #b97f52;
+    color: white;
+    border-radius: 20px;
+    outline: none;
+    font-weight: 600; 
+  }
  
   .elementos{
     height: 50px;
@@ -48,7 +60,7 @@
    
   }
   .buttonelementos{
-    width: 20%;
+    width: 10%;
     background-size: cover;
     background-position: center;
     display: inline-block;
@@ -75,6 +87,7 @@
     background-color: #e6e9eb;
     padding: 10px;
     opacity: .8;
+    font-weight: 700;
   }
   
   .grid-item {
